--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,8 +2,12 @@ app.title=Runswithshedlock
 navigation.toggle=Toggle navigation
 navigation.home=Home
 navigation.entities=Entities
+navigation.login=Login
+navigation.logout=Logout
 home.index.headline=Welcome to your new app\!
 home.index.text=Your app was created with <a href\="https\://bootify.io" target\="_blank" class\="underline">Bootify.io</a> and can now be customized. If you are happy with the result, <strong>please recommend us to other developers</strong> - so Bootify.io can grow further.
+home.index.swagger.text=Swagger is
+home.index.swagger.link=available here
 home.index.exploreEntities=Explore your entities
 error.page.message=The page you are looking for is not available right now.
 garminRun.list.headline=Garmin Runs
@@ -32,6 +36,12 @@ garminRun.edit.back=Back to list
 garminRun.create.success=Garmin Run was created successfully.
 garminRun.update.success=Garmin Run was updated successfully.
 garminRun.delete.success=Garmin Run was removed successfully.
+authentication.login.headline=Login
+authentication.login.label=Login
+authentication.password.label=Password
+authentication.login.required=Please login to access this area.
+authentication.login.error=Your login was not successful - please try again.
+authentication.logout.success=Your logout was successful.
 select.empty.label=Please select
 delete.confirm=Do you really want to delete this element? This cannot be undone.
 operation.success=Your operation was successful.
