Run Commits with security hookup. Exception issue

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,8 +4,8 @@ navigation.home=Home
 navigation.entities=Entities
 navigation.login=Login
 navigation.logout=Logout
-home.index.headline=Welcome to your new app\!
-home.index.text=Your app was created with <a href\="https\://bootify.io" target\="_blank" class\="underline">Bootify.io</a> and can now be customized. If you are happy with the result, <strong>please recommend us to other developers</strong> - so Bootify.io can grow further.
+home.index.headline=Welcome to shedlock\!
+home.index.text= Garmin run using shedlock framework
 home.index.swagger.text=Swagger is
 home.index.swagger.link=available here
 home.index.exploreEntities=Explore your entities
