add entity run-event

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,15 +36,37 @@ garminRun.edit.back=Back to list
 garminRun.create.success=Garmin Run was created successfully.
 garminRun.update.success=Garmin Run was updated successfully.
 garminRun.delete.success=Garmin Run was removed successfully.
+runEvent.list.headline=Run Events
+runEvent.list.createNew=Create new Run Event
+runEvent.list.empty=No Run Events could be found.
+runEvent.list.sort.id,ASC=Sort by Id (Ascending)
+runEvent.list.sort.runId,ASC=Sort by Run Id (Ascending)
+runEvent.list.sort.runEventType,ASC=Sort by Run Event Type (Ascending)
+runEvent.list.filter=Filter by Id
+runEvent.list.edit=Edit
+runEvent.list.delete=Delete
+runEvent.add.headline=Add Run Event
+runEvent.add.back=Back to list
+runEvent.id.label=Id
+runEvent.runId.label=Run Id
+runEvent.runEventType.label=Run Event Type
+runEvent.runInformation.label=Run Information
+runEvent.edit.headline=Edit Run Event
+runEvent.edit.back=Back to list
+runEvent.create.success=Run Event was created successfully.
+runEvent.update.success=Run Event was updated successfully.
+runEvent.delete.success=Run Event was removed successfully.
 authentication.login.headline=Login
 authentication.login.label=Login
 authentication.password.label=Password
 authentication.login.required=Please login to access this area.
 authentication.login.error=Your login was not successful - please try again.
 authentication.logout.success=Your logout was successful.
+Exists.runEvent.runId=This Run Id is already taken.
 select.empty.label=Please select
 delete.confirm=Do you really want to delete this element? This cannot be undone.
 operation.success=Your operation was successful.
+NotNull=Please provide a value.
 Size.java.lang.String=Your value must have a length between {2} and {1} characters.
 typeMismatch.java.lang.Integer=Please provide a valid whole number.
 pagination.previous=Previous
